fix alignement

--- a/static/css/localstyle.css
+++ b/static/css/localstyle.css
@@ -10,6 +10,10 @@
 
 }
 
+.card-body-title{
+
+}
+
 .total-cost{
     margin-bottom: 0px;
     margin-top: 0px;
